styles.css
/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Prevent font size inflation */
html {
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  box-sizing: border-box;
}

/* Smooth scroll */
@media (prefers-reduced-motion: no-preference) {
  html {
    scroll-behavior: smooth;
  }
}

/* Remove default margin in favour of better control in authored CSS */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin-block-end: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  line-height: 1.5;
}

html,
body {
  margin: 0;
  padding: 0;
  border: 0;
}

* {
  margin: 0;
}

/* Set shorter line heights on headings and interactive elements */
h1,
h2,
h3,
h4,
button,
input,
label {
  line-height: 1.1;
}

/* Balance text wrapping on headings */
h1,
h2,
h3,
h4 {
  text-wrap: balance;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
  color: currentColor;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Make sure textareas without a rows attribute are not tiny */
textarea:not([rows]) {
  min-height: 10em;
}

/* Anything that has been anchored to should have extra scroll margin */
:target {
  scroll-margin-block: 5ex;
}

body {
  font-family: "Red Hat Display", sans-serif;
}

header {
  display: flex;
  justify-content: center;
  padding-top: 3rem;
  padding-bottom: 3.375rem;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.hero {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 9.25rem;
}

.hero-left,
.hero-right {
  display: none;
}

.text-container {
  text-align: center;
  margin-top: 3rem;
  max-width: 28.5625rem;
}

.heading {
  font-weight: 900;
  font-size: 2.5rem;
  line-height: 110%;
  color: #28283d;
  margin-bottom: 1.5rem;
}

.paragraph {
  font-weight: 500;
  font-size: 1rem;
  line-height: 162%;
  color: #87879d;
  margin-bottom: 2rem;
}

.btn-container {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  gap: 1rem;
}

.btn {
  text-decoration: none;
  border: none;
  font-weight: 900;
  font-size: 1rem;
  line-height: 162%;
  color: #ffffff;
  background: #4d96a9;
  border-radius: 1.8125rem;
  padding: 1em 2.5em;
  cursor: pointer;
  transition: all 0.5s;
}

.btn-link {
  background: #855fb1;
  padding: 1rem 1.875rem;
}

.btn:hover {
  opacity: 0.8;
}

span {
  color: #8fe3f9;
}

.number {
  display: flex;
  justify-content: center;
  align-items: center;
  background: #fafafa;
  border: 1px solid rgba(135, 135, 157, 0.25);
  border-radius: 1.8125rem;
  width: 3.5rem;
  height: 3.5rem;
  position: relative;
}

.number::before {
  position: absolute;
  content: "";
  height: 5.25rem;
  top: -156%;
  mix-blend-mode: normal;
  opacity: 0.25;
  border: 1px solid #87879d;
}

.number2 {
  margin-bottom: -1.875rem;
}

.num-p {
  font-weight: 900;
  font-size: 1rem;
  line-height: 162%;
  color: #87879d;
}

.center {
  margin-bottom: 9.25rem;
}

.center-text {
  text-align: center;
  margin: 0 auto;
  max-width: 35.8125rem;
}

.sec-heading {
  font-weight: 900;
  font-size: 2rem;
  line-height: 112%;
  color: #28283d;
  margin-bottom: 1.75rem;
}

.uppercase {
  font-weight: 900;
  font-size: 1rem;
  line-height: 162%;
  letter-spacing: 4px;
  text-transform: uppercase;
  color: #4d96a9;
  margin-bottom: 1.5rem;
}

.p-center {
  margin-bottom: 0;
}

.gallery {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1.5rem;
  margin: 4rem auto;
  max-width: 31.25rem;
  padding: 1rem;
}

.gallery-img {
  border-radius: 5%;
}

footer {
  background-color: #4d96a9;
  background-blend-mode: soft-light;
  background-size: cover;
  background-image: url("assets/mobile/image-footer-mobile.jpg");
  background-repeat: no-repeat;
  padding: 5.8125rem 1.5rem 4.5rem;
}

.footer-heading {
  color: #fafafa;
  margin-bottom: 1.4375rem;
}

.footer-p {
  color: #fafafa;
  margin: 0 auto 2rem;
  max-width: 35.8125rem;
}

.wrapper {
  text-align: center;
}

@media screen and (min-width: 48rem) {
  header {
    padding-bottom: 4rem;
  }

  .hero {
    margin-bottom: 10.25rem;
  }

  .text-container {
    margin-top: 0;
    padding-top: 2.9375rem;
  }

  .heading {
    font-size: 3rem;
    line-height: 100%;
  }

  .btn-container {
    flex-direction: row;
  }

  .center {
    margin-bottom: 10.25rem;
  }

  .sec-heading {
    font-size: 2.5rem;
    line-height: 110%;
    margin-bottom: 2rem;
  }

  .gallery {
    grid-template-columns: repeat(4, 1fr);
    max-width: 43.0625rem;
    gap: 0.6875rem;
    margin-bottom: 3rem;
  }

  .uppercase {
    margin-bottom: 1rem;
  }

  footer {
    background-image: url("assets/tablet/image-footer-tablet.jpg");
    padding: 5.8125rem 1.5rem 4.125rem;
  }

  .footer-heading {
    margin-bottom: 2.125rem;
  }

  .footer-p {
    margin-bottom: 2.375rem;
  }
}

@media screen and (min-width: 61.125rem) {
  header {
    padding-top: 5rem;
    padding-bottom: 3.8125rem;
  }

  .hero {
    flex-direction: row;
    max-width: 94rem;
    margin: 0 auto 12.125rem;
  }

  .text-container {
    margin-top: 0;
    max-width: 33.75rem;
  }

  .heading {
    font-size: 4rem;
    margin-bottom: 2.125rem;
  }

  .paragraph {
    font-size: 1.125rem;
    line-height: 144%;
  }

  .image-container-mobile {
    display: none;
  }

  .hero-left,
  .hero-right {
    display: block;
  }

  .center {
    margin-bottom: 9.75rem;
  }

  .center-text {
    max-width: 33.75rem;
  }

  .gallery {
    gap: 1.875rem;
    max-width: 69.375rem;
    margin-bottom: 5rem;
  }

  .wrapper {
    text-align: left;
    display: flex;
    align-items: center;
    justify-content: space-between;
    max-width: 69.375rem;
    margin: 0 auto;
  }

  footer {
    background-image: url("assets/desktop/image-footer.jpg");
    padding: 7.25rem 1.5rem 6.5rem;
  }

  .footer-heading {
    margin-bottom: 0;
    max-width: 21.875rem;
  }

  .footer-p {
    margin-bottom: 0;
    max-width: 21.875rem;
  }
}

